tests/ui/typeck/issue-114251.stderr
error[E0308]: mismatched types
  --> $DIR/issue-114251.rs:15:19
   |
LL |         feedu8!();
   |                  - help: remove this semicolon
...
LL |     let cat: u8 = kitty;
   |              --   ^^^^^ expected `u8`, found `()`
   |              |
   |              expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
